# mandelbrot-greyscale

./: CMakeLists.txt  LICENSE  README.md  TODO  compile_flags.txt  mandelbrot  mandelbrot.cpp
